feat: allow agents to delete logs by source
